Added broken a href examples and linked things better

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <ol>
       <li><a href="./odin-recipes/index.html">Recipes Site</a></li>
     </ol>
+    <h1>To Notes</h1>
+    <ul>
+      <li><a href="./old_index.html">Sample HTML File</a></li>
+    </ul>
   </body>
 </html>
