--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Root</a>
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/tamales.html">Tamales Recipe</a></li>
