--- a/old_index.html
+++ b/old_index.html
@@ -50,5 +50,26 @@
       <li>Regardless of if the list is ordered (ol)</li>
       <li>Unordered (ul)</li>
     </ol>
+    <p>
+      <a target="_blank" rel="noreferrer" href="./non_existent.html"
+        >What will this broken relative link do?</a
+      >
+    </p>
+    <p>
+      <a href="./index.html">Working relative link (to root html)</a>
+    </p>
+    <p>
+      <a
+        href="https://www.theodinproject.com/paths/foundations/courses/foundations"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Working absolute html link (to Odin Project Fundamentals Course)</a
+      >
+    </p>
+    <p>
+      <a href="https://www.fake_website.biz/no" target="_blank" rel="noreferrer"
+        >What will this broken absolute link (to an external url) do?</a
+      >
+    </p>
   </body>
 </html>
