HELLA CSS notes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </ol>
     <h1>To Notes</h1>
     <ul>
-      <li><a href="./old_index.html">Sample HTML File</a></li>
+      <li><a href="./sample.html">Sample HTML File</a></li>
     </ul>
   </body>
 </html>
